--- a/src/pages/operator/css/MobileOperator.css
+++ b/src/pages/operator/css/MobileOperator.css
@@ -267,9 +267,10 @@
 .footer-controls_XP>div {
     display: inline-flex;
     width: 75px;
-    height: 50px;
+    max-width: 75px;
+    overflow: visible;
+    max-height: 50px;
     border-radius: 5px;
-    border: 1px solid #272727;
     justify-content: center;
     text-align: center;
 }
